k8s/base/istio/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rhtech-vs
spec:
  hosts:
  - "*"
  gateways:
  - rhtech-gateway
  http:
  - match:
    - uri:
        prefix: /api
    route:
    - destination:
        host: backend-service
        subset: v1
      weight: 100
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: frontend-service
      weight: 100
